Fixed grpc service for client and server

--- a/sources/Common/SDK.Abstractions/SDK.Abstractions.csproj
+++ b/sources/Common/SDK.Abstractions/SDK.Abstractions.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>    
+    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+    <OutputType>Library</OutputType>
     <IsNetStd20 Condition="'$(TargetFramework)'=='netstandard2.0'">true</IsNetStd20>
     <IsNetStd21 Condition="'$(TargetFramework)'=='netstandard2.1'">true</IsNetStd21>
     <IsNetCore31 Condition="'$(TargetFramework)'=='netcoreapp3.1'">true</IsNetCore31>
@@ -10,6 +11,7 @@
     <Nullable Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">enable</Nullable>
     <AssemblyName>TheSharpFactory.Common.SDK.Abstractions</AssemblyName>
     <RootNamespace>TheSharpFactory.Common.SDK</RootNamespace>
+    <EnableDefaultContentItems>false</EnableDefaultContentItems>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -22,11 +24,20 @@
     <DefineConstants Condition="'$(IsNetStd20)'=='true'">DEBUG;netstandard20</DefineConstants>
     <DefineConstants Condition="'$(IsNetStd21)'=='true'">TRACE;netstandard21</DefineConstants>
     <DefineConstants Condition="'$(IsNetCore31)'=='true'">TRACE;netcoreapp31</DefineConstants>
-  </PropertyGroup>  
+  </PropertyGroup>
 
-  <ItemGroup>  
-    <PackageReference Include="AutoMapper" Version="10.0.0" />  
-    <PackageReference Include="Google.Protobuf" Version="3.12.3" />  
+  <ItemGroup>
+    <Protobuf Include="..\..\Schemas\grpc-sdk.proto" GrpcServices="Client">
+      <Link>schemas\grpc.proto</Link>
+    </Protobuf>
+    <None Update="schemas\grpc.proto">
+      <GrpcServices>Client</GrpcServices>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.12.3" />
     <PackageReference Include="Grpc.Core" Version="2.29.0" />
     <PackageReference Include="Grpc.Core.Api" Version="2.29.0" />
     <PackageReference Include="Grpc.Tools" Version="2.29.0">
@@ -42,7 +53,15 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">  
+  <ItemGroup Condition="'$(IsNetCore31)'=='true'">
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.29.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.29.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.ClientFactory" Version="2.29.0" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.29.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">
+    <PackageReference Include="Grpc.Net.Client" Version="2.29.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.HttpHandler" Version="3.2.0" />
   </ItemGroup>
@@ -57,7 +76,6 @@
     <Content Include="schemas\berry.json" />
     <Content Include="schemas\schema.graphql" />
     <Content Include="schemas\query.graphql" />
-    <Content Include="..\..\Schemas\sales.proto" Link="schemas\sales.proto" Visible="True" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">
