--- a/sources/Common/SDK/SDK.csproj
+++ b/sources/Common/SDK/SDK.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1;</TargetFrameworks>
     <OutputType>Library</OutputType>
@@ -20,11 +20,6 @@
     </OpenApiReference>
     <Content Update="schemas\swagger.json" />
   </ItemGroup>
-  <ItemGroup>
-    <Protobuf Include="..\..\Schemas\sales.proto" GrpcServices="Client">
-      <Link>schemas\sales.proto</Link>
-    </Protobuf>
-  </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <DefineConstants Condition="'$(IsNetStd20)'=='true'">DEBUG;netstandard20</DefineConstants>
     <DefineConstants Condition="'$(IsNetStd21)'=='true'">DEBUG;netstandard21</DefineConstants>
@@ -35,19 +30,7 @@
     <DefineConstants Condition="'$(IsNetStd21)'=='true'">TRACE;netstandard21</DefineConstants>
     <DefineConstants Condition="'$(IsNetCore31)'=='true'">TRACE;netcoreapp31</DefineConstants>
   </PropertyGroup>
-  <ItemGroup>
-    <DotNetToolReference Include="Microsoft.dotnet-openapi" Version="3.1.5" />
-    <PackageReference Include="Google.Protobuf" Version="3.12.3" />
-    <PackageReference Include="GraphQL.Client" Version="3.1.3" />
-    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.1.3" />
-    <PackageReference Include="Grpc.Core" Version="2.29.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Grpc.Tools" Version="2.29.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+  <ItemGroup>            
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.3" />
     <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="3.1.5">
@@ -64,13 +47,7 @@
     <PackageReference Include="System.Linq.Async" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(IsNetCore31)'=='true'">
-    <PackageReference Include="Grpc.Net.Client.Web" Version="2.29.0" />
-    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.29.0" />
-    <PackageReference Include="Grpc.AspNetCore.Server.ClientFactory" Version="2.29.0" />
-    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.29.0" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">
-    <PackageReference Include="Grpc.Net.Client" Version="2.29.0" />
+    
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\Common.DTO.csproj" />
