Completed Task AB#45: Integrated Static assets into MVC and blazor server & client projects as a test

--- a/sources/Applications/Web/BlazorServer/Apps.Web.BlazorServer.csproj
+++ b/sources/Applications/Web/BlazorServer/Apps.Web.BlazorServer.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Apps.Shared.StaticAssets\Apps.Shared.StaticAssets.csproj" />
     <ProjectReference Include="..\BlazorClient\Apps.Web.BlazorClient.csproj" />
     <ProjectReference Include="..\SharedUI.Blazor\Apps.Web.SharedUI.Blazor.csproj" />
   </ItemGroup>
