fixed the following things: 1. specified a https endpoint 2. SPecified API endpoint for dev env 3. Code cleanup

--- a/sources/Applications/Web/MVC/appsettings.Development.json
+++ b/sources/Applications/Web/MVC/appsettings.Development.json
@@ -1,12 +1,12 @@
 {
+  "Api": {
+    "Url": "https://localhost:6050"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "Api": {
-    "url": "https://localhost:6050"
   }
 }
