--- a/sources/Applications/Shared/Abstractions/Services/Apps.Shared.Abstractions.Services.csproj
+++ b/sources/Applications/Shared/Abstractions/Services/Apps.Shared.Abstractions.Services.csproj
@@ -2,27 +2,11 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-    <IsNetStd20 Condition="'$(TargetFramework)'=='netstandard2.0'">true</IsNetStd20>
-    <IsNetStd21 Condition="'$(TargetFramework)'=='netstandard2.1'">true</IsNetStd21>
-    <IsNetCore31 Condition="'$(TargetFramework)'=='netcoreapp3.1'">true</IsNetCore31>
-    <LangVersion Condition="'$(IsNetStd20)'=='true'">7.3</LangVersion>
-    <LangVersion Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">8.0</LangVersion>
-    <Nullable Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">enable</Nullable>
     <AssemblyName>TheSharpFactory.Apps.Shared.Abstractions.Services</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Shared.Services</RootNamespace>
-  </PropertyGroup>     
-
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <DefineConstants Condition="'$(IsNetStd20)'=='true'">DEBUG;netstandard20</DefineConstants>
-    <DefineConstants Condition="'$(IsNetStd21)'=='true'">DEBUG;netstandard21</DefineConstants>
-    <DefineConstants Condition="'$(IsNetCore31)'=='true'">DEBUG;netcoreapp31</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <DefineConstants Condition="'$(IsNetStd20)'=='true'">DEBUG;netstandard20</DefineConstants>
-    <DefineConstants Condition="'$(IsNetStd21)'=='true'">TRACE;netstandard21</DefineConstants>
-    <DefineConstants Condition="'$(IsNetCore31)'=='true'">TRACE;netcoreapp31</DefineConstants>
-  </PropertyGroup>
+  <Import Project="..\..\..\..\build\sdk-style-project.props" />
 
   <ItemGroup>
     <AdditionalFiles Include="..\..\..\..\Architecture\App.layerdiagram" Link="App.layerdiagram" Visible="False" />
@@ -46,4 +30,3 @@
   </ItemGroup>
 
 </Project>
-                                                      
