--- a/sources/Applications/Web/SharedUI.Blazor/Apps.Web.SharedUI.Blazor.csproj
+++ b/sources/Applications/Web/SharedUI.Blazor/Apps.Web.SharedUI.Blazor.csproj
@@ -2,19 +2,12 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netcoreapp3.1</TargetFrameworks>
-    <LangVersion>8.0</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>TheSharpFactory.Apps.Web.SharedUI.Blazor</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Web.SharedUI</RootNamespace>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
-    <DefineConstants>TRACE;DEBUG;netstandard21;</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
-    <DefineConstants>TRACE;DEBUG;netcoreapp31;</DefineConstants>
-  </PropertyGroup>
+  <Import Project="..\..\..\build\sdk-style-project.props" />
 
   <ItemGroup>
     <Compile Remove="Data\**" />
