Completed task AB#47: Imported prop files into all the projects

--- a/sources/Common/SDK.Extensions/SDK.Extensions.csproj
+++ b/sources/Common/SDK.Extensions/SDK.Extensions.csproj
@@ -2,27 +2,11 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
-    <IsNetStd20 Condition="'$(TargetFramework)'=='netstandard2.0'">true</IsNetStd20>
-    <IsNetStd21 Condition="'$(TargetFramework)'=='netstandard2.1'">true</IsNetStd21>
-    <IsNetCore31 Condition="'$(TargetFramework)'=='netcoreapp3.1'">true</IsNetCore31>
-    <LangVersion Condition="'$(IsNetStd20)'=='true'">7.3</LangVersion>
-    <LangVersion Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">8.0</LangVersion>
-    <Nullable Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">enable</Nullable>
     <AssemblyName>TheSharpFactory.SDK.Extensions</AssemblyName>
     <RootNamespace>TheSharpFactory.SDK</RootNamespace>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <DefineConstants Condition="'$(IsNetStd20)'=='true'">DEBUG;netstandard20</DefineConstants>
-    <DefineConstants Condition="'$(IsNetStd21)'=='true'">DEBUG;netstandard21</DefineConstants>
-    <DefineConstants Condition="'$(IsNetCore31)'=='true'">DEBUG;netcoreapp31</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <DefineConstants Condition="'$(IsNetStd20)'=='true'">DEBUG;netstandard20</DefineConstants>
-    <DefineConstants Condition="'$(IsNetStd21)'=='true'">TRACE;netstandard21</DefineConstants>
-    <DefineConstants Condition="'$(IsNetCore31)'=='true'">TRACE;netcoreapp31</DefineConstants>
-  </PropertyGroup>
+  <Import Project="..\..\build\sdk-style-project.props" />
 
   <ItemGroup>
     <PackageReference Include="GraphQL.Client" Version="3.1.3" />
@@ -30,12 +14,12 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
     <PackageReference Include="StrawberryShake" Version="11.0.0-preview.138" />
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">
-    <PackageReference Include="Grpc.Net.Client.Web" Version="2.29.0" />
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.29.0" />
-    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.29.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsNetCore31)'=='true'">
