--- a/sources/Common/SDK.Extensions/SDK.Extensions.csproj
+++ b/sources/Common/SDK.Extensions/SDK.Extensions.csproj
@@ -32,4 +32,10 @@
     <ProjectReference Include="..\SDK\SDK.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\Architecture\App.layerdiagram" Link="App.layerdiagram" Visible="False" />
+    <None Include="..\..\Architecture\App.layerdiagram.layout" Link="App.layerdiagram.layout" Visible="False" />
+    <None Include="..\..\Architecture\App.layerdiagram.suppressions" Link="App.layerdiagram.suppressions" Visible="False" />
+  </ItemGroup>
+
 </Project>
