--- a/sources/Applications/Shared/StaticAssets/Apps.Shared.StaticAssets.csproj
+++ b/sources/Applications/Shared/StaticAssets/Apps.Shared.StaticAssets.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.5" />
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
   </ItemGroup>      
 
   <ItemGroup>
