--- a/sources/Common/SDK.Extensions/SDK.Extensions.csproj
+++ b/sources/Common/SDK.Extensions/SDK.Extensions.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.Client" Version="3.1.3" />
     <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.1.3" />
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
     <PackageReference Include="StrawberryShake" Version="11.0.0-preview.138" />
