Partially completed task AB#50: Changed all launch settings to integrate ms tye settings and correct ports

--- a/sources/Applications/Hybrid/Desktop.WebWindow/Properties/launchSettings.json
+++ b/sources/Applications/Hybrid/Desktop.WebWindow/Properties/launchSettings.json
@@ -1,10 +1,22 @@
 {
   "profiles": {
-    "Apps.Cross.Desktop.WebWindow": {
+    "Web Window": {
       "commandName": "Project",
       "environmentVariables": {
         "IS_WEBWINDOW": "True"
       }
+    },
+    "Tye": {
+      "commandName": "Executable",
+      "executablePath": "tye",
+      "commandLineArgs": "run",
+      "workingDirectory": "."
+    },
+    "Tye-All": {
+      "commandName": "Executable",
+      "executablePath": "tye",
+      "commandLineArgs": "run",
+      "workingDirectory": "..\\..\\.."
     }
   }
 }
