--- a/sources/Applications/Web/BlazorServer/Properties/launchSettings.json
+++ b/sources/Applications/Web/BlazorServer/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:6062;"
     },
     "Docker": {
       "commandName": "Docker",
@@ -29,6 +29,18 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "Tye": {
+      "commandName": "Executable",
+      "executablePath": "tye",
+      "commandLineArgs": "run",
+      "workingDirectory": "."
+    },
+    "Tye-All": {
+      "commandName": "Executable",
+      "executablePath": "tye",
+      "commandLineArgs": "run",
+      "workingDirectory": "..\\..\\.."
     }
   }
 }
