--- a/sources/Applications/Hybrid/Desktop.ElectronWeb/Properties/launchSettings.json
+++ b/sources/Applications/Hybrid/Desktop.ElectronWeb/Properties/launchSettings.json
@@ -9,7 +9,19 @@
         "IS_ELECTRON": "True",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:6067;"
+    },
+    "Tye": {
+      "commandName": "Executable",
+      "executablePath": "tye",
+      "commandLineArgs": "run",
+      "workingDirectory": "."
+    },
+    "Tye-All": {
+      "commandName": "Executable",
+      "executablePath": "tye",
+      "commandLineArgs": "run",
+      "workingDirectory": "..\\..\\.."
     }
   }
 }
