Completed task AB#50: Used buster-slim docker images

--- a/sources/Applications/Hybrid/Desktop.ElectronWeb/Apps.Hybrid.Desktop.ElectronWeb.csproj
+++ b/sources/Applications/Hybrid/Desktop.ElectronWeb/Apps.Hybrid.Desktop.ElectronWeb.csproj
@@ -7,7 +7,8 @@
     <OutputType>WinExe</OutputType>
     <AssemblyName>TheSharpFactory.Apps.Hybrid.Desktop.ElectronWeb</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Cross.Desktop.ElectronWeb</RootNamespace>
-
+    <ContainerBaseImage>mcr.microsoft.com/dotnet/core/sdk</ContainerBaseImage>
+    <ContainerBaseTag>3.1-buster-slim</ContainerBaseTag>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
