--- a/sources/Applications/Web/MVC/Apps.Web.MVC.csproj
+++ b/sources/Applications/Web/MVC/Apps.Web.MVC.csproj
@@ -7,6 +7,8 @@
     <AssemblyName>TheSharpFactory.Apps.Web.MVC</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Web.MVC</RootNamespace>
     <UserSecretsId>554cd27e-b609-4eae-84e7-c9720a7ee1fe</UserSecretsId>
+    <ContainerBaseImage>mcr.microsoft.com/dotnet/core/sdk</ContainerBaseImage>
+    <ContainerBaseTag>3.1-buster-slim</ContainerBaseTag>
   </PropertyGroup>
 
   <ItemGroup>
