--- a/sources/Applications/Web/BlazorClient/Apps.Web.BlazorClient.csproj
+++ b/sources/Applications/Web/BlazorClient/Apps.Web.BlazorClient.csproj
@@ -7,6 +7,8 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <AssemblyName>TheSharpFactory.Apps.Web.BlazorClient</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Web.BlazorClient</RootNamespace>
+    <ContainerBaseImage>mcr.microsoft.com/dotnet/core/sdk</ContainerBaseImage>
+    <ContainerBaseTag>3.1-buster-slim</ContainerBaseTag>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
