Refactored folder name and project references

--- a/sources/Common/DTO/Common.DTO.csproj
+++ b/sources/Common/DTO/Common.DTO.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\Models\Domain.Models.csproj" />
-    <ProjectReference Include="..\Common.DTO.Abstractions\Common.DTO.Abstractions.csproj" />
+    <ProjectReference Include="..\DTO.Abstractions\Common.DTO.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
