--- a/sources/Services/GraphTypes/Services.GraphTypes.csproj
+++ b/sources/Services/GraphTypes/Services.GraphTypes.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.DTO.Abstractions\Common.DTO.Abstractions.csproj" />
+    <ProjectReference Include="..\..\Common\DTO.Abstractions\Common.DTO.Abstractions.csproj" />
     <ProjectReference Include="..\..\Domain\Abstractions\Domain.Abstractions.csproj" />
   </ItemGroup>
 
