--- a/sources/Applications/Shared/Abstractions/Services/Apps.Shared.Abstractions.Services.csproj
+++ b/sources/Applications/Shared/Abstractions/Services/Apps.Shared.Abstractions.Services.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Common\DTO\Common.DTO.csproj" />
+    <ProjectReference Include="..\..\..\..\Common\DTO.Abstractions\Common.DTO.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\..\Common\SDK.Abstractions\SDK.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\..\Common\SDK\SDK.csproj" />
     <ProjectReference Include="..\ViewModels\Apps.Shared.Abstractions.ViewModels.csproj" />
