--- a/sources/Applications/Cross-Platform/Linux/iOS.Blazor/Apps.Cross.iOS.Blazor.csproj
+++ b/sources/Applications/Cross-Platform/Linux/iOS.Blazor/Apps.Cross.iOS.Blazor.csproj
@@ -50,6 +50,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>None</MtouchLink>
     <MtouchInterpreter>-all</MtouchInterpreter>
+    <MtouchFastDev>true</MtouchFastDev>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -129,7 +130,7 @@
     <PackageReference Include="Microsoft.DependencyValidation.Analyzers">
       <Version>0.11.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
