Task AB#60: Added "includ path" in push and pr trigger

--- a/sources/azure-pipelines/apps.admin.cross.android.yml
+++ b/sources/azure-pipelines/apps.admin.cross.android.yml
@@ -15,6 +15,9 @@ trigger:
           - feature/*/*
           - epic/*/*
   paths:
+     include:
+          - /**/**/*.csproj
+          - /**/**/*.cs
      exclude:
           - *.md
           - /**/*.md
@@ -31,6 +34,8 @@ pr:
           - feature/*/*
           - epic/*/*
   paths:
+     include:
+          - /**/**/*.*
      exclude:
           - *.md
           - /**/*.md
